objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Mode_de_financement2__c</fullName>
        <label>Mode_de_financement2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>A titre individuel</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Bourse</fullName>
                </value>
                <value>
                    <fullName>Bourse étudiante</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIF hors temps de travail</fullName>
                </value>
                <value>
                    <fullName>CIF temps de travail</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
                <value>
                    <fullName>DIF</fullName>
                </value>
                <value>
                    <fullName>Entreprise</fullName>
                </value>
                <value>
                    <fullName>Financement Opca</fullName>
                </value>
                <value>
                    <fullName>Par les parents</fullName>
                </value>
                <value>
                    <fullName>Plan de formation</fullName>
                </value>
                <value>
                    <fullName>Prise en charge direct entreprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode_de_financement3__c</fullName>
        <label>Mode_de_financement3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>A titre individuel</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Bourse</fullName>
                </value>
                <value>
                    <fullName>Bourse étudiante</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIF hors temps de travail</fullName>
                </value>
                <value>
                    <fullName>CIF temps de travail</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
                <value>
                    <fullName>DIF</fullName>
                </value>
                <value>
                    <fullName>Entreprise</fullName>
                </value>
                <value>
                    <fullName>Financement Opca</fullName>
                </value>
                <value>
                    <fullName>Par les parents</fullName>
                </value>
                <value>
                    <fullName>Plan de formation</fullName>
                </value>
                <value>
                    <fullName>Prise en charge direct entreprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mode_de_financement__c</fullName>
        <label>Mode de financement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>A titre gratuit</fullName>
                </value>
                <value>
                    <fullName>A titre individuel</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Bourse</fullName>
                </value>
                <value>
                    <fullName>Bourse étudiante</fullName>
                </value>
                <value>
                    <fullName>CIF</fullName>
                </value>
                <value>
                    <fullName>CIF hors temps de travail</fullName>
                </value>
                <value>
                    <fullName>CIF temps de travail</fullName>
                </value>
                <value>
                    <fullName>CPF</fullName>
                </value>
                <value>
                    <fullName>DIF</fullName>
                </value>
                <value>
                    <fullName>Entreprise</fullName>
                </value>
                <value>
                    <fullName>OPCA</fullName>
                </value>
                <value>
                    <fullName>Par les parents</fullName>
                </value>
                <value>
                    <fullName>Plan de formation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mois_date_de_rentr_e_cloture__c</fullName>
        <formula>MID(TEXT(CloseDate),6,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mois date de rentrée / cloture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Montant_diff_rentiel_avec_ch_ancier__c</fullName>
        <formula>Amount -  Somme_Montant_Ech_ancier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Montant différentiel avec échéancier</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montant_promesse__c</fullName>
        <label>Montant promesse</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Motif_de_fermeture__c</fullName>
        <label>Motif de fermeture</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abandon</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Choisi école concurrente</fullName>
                </value>
                <value>
                    <fullName>Choisi organisme concurrent</fullName>
                </value>
                <value>
                    <fullName>Choix autre programme EMLYON</fullName>
                </value>
                <value>
                    <fullName>Concurrence</fullName>
                </value>
                <value>
                    <fullName>Déçu par l&apos;Ecole</fullName>
                </value>
                <value>
                    <fullName>Demande incohérente</fullName>
                </value>
                <value>
                    <fullName>Etablissements non assujettis à la Taxe</fullName>
                </value>
                <value>
                    <fullName>Existe Déjà</fullName>
                </value>
                <value>
                    <fullName>Hors profil</fullName>
                </value>
                <value>
                    <fullName>Injoignable</fullName>
                </value>
                <value>
                    <fullName>Investissement trop élevé</fullName>
                </value>
                <value>
                    <fullName>Motif budgétaire</fullName>
                </value>
                <value>
                    <fullName>Ne correspond pas aux attentes</fullName>
                </value>
                <value>
                    <fullName>Ne répond pas à la sollicitation</fullName>
                </value>
                <value>
                    <fullName>Non admis</fullName>
                </value>
                <value>
                    <fullName>Non éligible</fullName>
                </value>
                <value>
                    <fullName>Pas convaincu</fullName>
                </value>
                <value>
                    <fullName>Pas de budget</fullName>
                </value>
                <value>
                    <fullName>Pas de place disponible</fullName>
                </value>
                <value>
                    <fullName>Pas d’argent pour mon école</fullName>
                </value>
                <value>
                    <fullName>Pas pour le moment</fullName>
                </value>
                <value>
                    <fullName>Pas soutenu par son entreprise</fullName>
                </value>
                <value>
                    <fullName>Problème financement</fullName>
                </value>
                <value>
                    <fullName>Raisons personnelles</fullName>
                </value>
                <value>
                    <fullName>Redressement / Liquidation Judiciaire</fullName>
                </value>
                <value>
                    <fullName>Refusé(e) en sélection</fullName>
                </value>
                <value>
                    <fullName>Refus sélection</fullName>
                </value>
                <value>
                    <fullName>Reorienté autre BU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Motif_gratuite__c</fullName>
        <label>Motif de gratuité</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Mode_de_financement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Module complémentaire au programme initiale</fullName>
                </value>
                <value>
                    <fullName>Remerciement</fullName>
                </value>
                <value>
                    <fullName>Offre commerciale BtB</fullName>
                </value>
                <value>
                    <fullName>Geste commercial (insatisfaction)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Moyen_de_paiement__c</fullName>
        <label>Moyen de paiement</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Vehicule__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Chèque</fullName>
                </value>
                <value>
                    <fullName>Don en ligne</fullName>
                </value>
                <value>
                    <fullName>Virement en ligne</fullName>
                </value>
                <value>
                    <fullName>Prélèvement automatique</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_du_versement__c</fullName>
        <label>Nature du versement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chèque</fullName>
                </value>
                <value>
                    <fullName>Virement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nb_PO__c</fullName>
        <label>Nb PO</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Niveau_d_exp_rience_professionnelle__c</fullName>
        <formula>TEXT(Contact_central__r.Niveau_d_exp_rience__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Niveau d&apos;expérience professionnelle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Niveau_d_tudes__c</fullName>
        <formula>TEXT(Contact_central__r.Niveau_d_tudes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Niveau d&apos;études</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nom_Prenom__c</fullName>
        <formula>Contact_central__r.Nom_Prenom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nom Prénom</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_d_heures__c</fullName>
        <label>Nombre d&apos;heures</label>
        <summarizedField>OpportunityLineItem.Nombre_d_heures__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.NB_d_heure_et_jour_calculer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_d_opportunit_qualifi_es_en_cours__c</fullName>
        <formula>Contact_central__r.nb_SIP_en_cours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre d&apos;opportunité qualifiées en cours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_d_opportunites_du_compte__c</fullName>
        <formula>Account.Nombre_opportunites__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre d&apos;opportunités du compte</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_de_jours__c</fullName>
        <description>utilisé pour les devis formation courtes</description>
        <label>Nombre de jours</label>
        <summarizedField>OpportunityLineItem.Nombre_de_jours__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.NB_d_heure_et_jour_calculer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_de_participants_cible__c</fullName>
        <label>Nombre de participants cible</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nombre_de_produits__c</fullName>
        <description>Permet de savoir si l&apos;opportunité possède un produit (sert pour règle de validation sur opportunité)</description>
        <label>Nombre de produits</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nombre_de_report__c</fullName>
        <description>Compteur de report à mettre à jour manuellement sur la nouvelle opportunité pour garder la trace du report</description>
        <inlineHelpText>Compteur de report à mettre à jour manuellement sur la nouvelle opportunité pour garder la trace du report</inlineHelpText>
        <label>Nombre de report</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_postes_de_type_parcours__c</fullName>
        <label>Nombre postes de type pack</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Type_produit__c</field>
            <operation>equals</operation>
            <value>Pack</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Num_ro_de_versement__c</fullName>
        <label>Numéro de versement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCTA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OCTA supposé</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Est_un_OCTA__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Taxe Opportunités</relationshipLabel>
        <relationshipName>Opportunites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Suiveur de l&apos;opportunité</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_riode__c</fullName>
        <formula>IF ( MONTH(CloseDate) &lt;= 8,TEXT(YEAR(CloseDate)),TEXT(YEAR(CloseDate)+1))
&amp;&quot;_P&quot;&amp;IF ( MONTH(CloseDate) &lt;= 3,&quot;2&quot;,IF ( MONTH(CloseDate) &lt;= 8,&quot;3&quot;,&quot;1&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Période</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parcours__c</fullName>
        <formula>Nombre_postes_de_type_parcours__c &gt;0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pack</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <label>Participants</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Point_cl__c</fullName>
        <label>Point clé</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescripteur__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Définit que l’opportunité est liée à un prescripteur</description>
        <label>Prescripteur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Programme_chapeau__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programme chapeau</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunités</relationshipLabel>
        <relationshipName>Opportunit_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programme_de_reconnaissance_compte__c</fullName>
        <formula>TEXT(Account.Programme_de_reconnaissance__c)</formula>
        <label>Programme de reconnaissance compte</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Programme_de_reconnaissance_contact__c</fullName>
        <formula>TEXT (Contact_central__r.Programme_de_reconnaissance__c )</formula>
        <label>Programme de reconnaissance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provenance__c</fullName>
        <inlineHelpText>décrit le canal technique d’arrivée de la fiche piste dans le système</inlineHelpText>
        <label>Canal d&apos;acquisition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Adwords</fullName>
                </value>
                <value>
                    <fullName>Agent commercial</fullName>
                </value>
                <value>
                    <fullName>Appel d’offre</fullName>
                </value>
                <value>
                    <fullName>Appel ou Email entrant</fullName>
                </value>
                <value>
                    <fullName>Application mobile</fullName>
                </value>
                <value>
                    <fullName>Apport Professeur/Intervenant</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Campus Day virtuel</fullName>
                </value>
                <value>
                    <fullName>Directories/ Guides</fullName>
                </value>
                <value>
                    <fullName>Display/ Banners</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Emailing Externe</fullName>
                </value>
                <value>
                    <fullName>Evénement/ Conférence</fullName>
                </value>
                <value>
                    <fullName>Fichiers externes</fullName>
                </value>
                <value>
                    <fullName>Foisonnement</fullName>
                </value>
                <value>
                    <fullName>Forum/ Salon</fullName>
                </value>
                <value>
                    <fullName>Import contacts</fullName>
                </value>
                <value>
                    <fullName>Master class</fullName>
                </value>
                <value>
                    <fullName>Module Chat</fullName>
                </value>
                <value>
                    <fullName>Open class</fullName>
                </value>
                <value>
                    <fullName>Prescripteurs</fullName>
                </value>
                <value>
                    <fullName>Présentation aux écoles/ universités</fullName>
                </value>
                <value>
                    <fullName>Présentation étudiants</fullName>
                </value>
                <value>
                    <fullName>Prospection</fullName>
                </value>
                <value>
                    <fullName>Récurrence</fullName>
                </value>
                <value>
                    <fullName>Réseaux sociaux</fullName>
                </value>
                <value>
                    <fullName>Réunion d&apos;information France</fullName>
                </value>
                <value>
                    <fullName>Réunion d&apos;information Internationale</fullName>
                </value>
                <value>
                    <fullName>Salon virtuel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recu_ERP_Devis__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Champ qui sera rempli par le web service EMLYON pour définir les opportunités Intra (devis)  à envoyer vers à AGRESSO</description>
        <label>Recu ERP Devis</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remise_interentreprise__c</fullName>
        <formula>Account.Remise_interentreprise__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remise interentreprise</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remplissage_Dossier_CANEL__c</fullName>
        <label>Remplissage Dossier CANEL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reprise_Lot_2015__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reprise Lot 2015</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReseauPaysContact__c</fullName>
        <description>Ce champ permet de ramener l&apos;information du reseau du pays du contact.
Ce champ technique est utilisé par l&apos;interface pour définir le catalogue de prix à utiliser.</description>
        <formula>TEXT(Contact_central__r.Pays__r.Reseau__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReseauPaysContact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsable_pedagogique_del__c</fullName>
        <description>Définit l’intervenant</description>
        <label>Responsable pédagogique</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Responsable_plan_de_formation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Coché si le contact est  la personne responsabe du plan de formation</description>
        <label>Responsable plan de formation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secteur_activit_compte__c</fullName>
        <description>Il s’agit du secteur d’activité du compte lié à l’opportunité</description>
        <formula>TEXT(  Account.Industry  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secteur d’activité compte</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sens_de_prise_de_contact__c</fullName>
        <label>Sens de prise de contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Partenaire ==&gt; EMLYON</fullName>
                </value>
                <value>
                    <fullName>EMLYON ==&gt; Partenaire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_d_enseignement__c</fullName>
        <label>Site d&apos;enseignement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ecully</fullName>
                </value>
                <value>
                    <fullName>Paris</fullName>
                </value>
                <value>
                    <fullName>Résidentiel</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>OPP-SE10</fullName>
                </value>
                <value>
                    <fullName>OPP-SE20</fullName>
                </value>
                <value>
                    <fullName>OPP-SE30</fullName>
                </value>
                <value>
                    <fullName>OPP-SE40</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Casablanca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Somme_Montant_Ech_ancier__c</fullName>
        <label>Somme Montant Echéancier</label>
        <summarizedField>Echeancier__c.Montant_previsionnel__c</summarizedField>
        <summaryForeignKey>Echeancier__c.Opportunite__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Souhaite_rester_confidentiel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Souhaite rester confidentiel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Souhaite_tre_contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Souhaite être contacté</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sous_provenance__c</fullName>
        <inlineHelpText>précise un sous canal de la fiche piste dans le système</inlineHelpText>
        <label>Détail canal d&apos;acquisition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stade_d_clar_de_la_d_marche__c</fullName>
        <label>Stade déclaré de la démarche</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recherche simple</fullName>
                </value>
                <value>
                    <fullName>Réflexion en cours</fullName>
                </value>
                <value>
                    <fullName>Choix presque finalisé</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statut_Canel__c</fullName>
        <label>Statut Candidature CANEL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statut_Dossier_CANEL__c</fullName>
        <label>Statut Dossier CANEL</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_External_Id__c</fullName>
        <description>Champ technique qui contient la copie de l&apos;Id de l&apos;enregistrement 
en production</description>
        <externalId>true</externalId>
        <label>TECH_External_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theme__c</fullName>
        <inlineHelpText>Thématique de campagne destinée à segmenter les pistes</inlineHelpText>
        <label>Thème</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Entrepreneuriat/ Innovation</fullName>
                </value>
                <value>
                    <fullName>Management Général</fullName>
                </value>
                <value>
                    <fullName>Management et ressources humaines</fullName>
                </value>
                <value>
                    <fullName>Stratégie</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Achats</fullName>
                </value>
                <value>
                    <fullName>Développement personnel</fullName>
                </value>
                <value>
                    <fullName>Programmes pour dirigeants</fullName>
                </value>
                <value>
                    <fullName>Programmes de leadership</fullName>
                </value>
                <value>
                    <fullName>Conduite du changement</fullName>
                </value>
                <value>
                    <fullName>Coaching</fullName>
                </value>
                <value>
                    <fullName>Luxe</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Action Learning</fullName>
                </value>
                <value>
                    <fullName>Transport / Logistique</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Categorie_B__c</fullName>
        <label>Dont Catégorie B</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Id_entree_de_catalogue__c</field>
            <operation>equals</operation>
            <value>01uw000000mpmG3AAI</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Type_compte__c</fullName>
        <description>Il s’agit du type d’établissement du compte lié l’opportunité</description>
        <formula>TEXT( Account.Type_d_tablissement__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type de compte</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicule__c</fullName>
        <label>Véhicule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AESCRA</fullName>
                </value>
                <value>
                    <fullName>Fondation de France</fullName>
                </value>
                <value>
                    <fullName>Fond de dotation Alliance</fullName>
                </value>
                <value>
                    <fullName>Friends of Allyage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Votre_formation__c</fullName>
        <description>Nom de session de formation -rempli par WF</description>
        <label>Votre formation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18caracter__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18caracter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateMajNotEqualsCreatedDate__c</fullName>
        <formula>Date_de_mise__c != CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>dateMajNotEqualsCreatedDate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>date_crea_fiche_util__c</fullName>
        <formula>TEXT(Date_de_mise__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>date crea fiche util</label>
        <type>Text</type>
    </fields>
</CustomObject>